Add new Service for the Shortener and improve some issues in JS

--- a/index.html
+++ b/index.html
@@ -93,20 +93,12 @@
             <form action="" class="shortener_wrapper" id="myForm">
                 <input type="text" class="input-field" placeholder="Shorten a link here...">
                 <button class="btn-submit" type="submit">Shorten It!</button>
+                <button class="btn-danger">Clear all!</button>
             </form>
         </main>
       </header>
       <section class="statistics">
         <ul id="myData">
-          <!-- <li class="list-items">
-           <div class="long-link">
-              <a href="#">https://www.youtube.com/watch?v=T3Px88x_PsA&t=393s</a>
-           </div>
-            <div class="list-shorten">
-              <a class="shorten-link" href="https://rel.ink/nWvX3k">https://rel.ink/nWvX3k</a>
-              <button class="shorten-link_btn">Copy</button>
-            </div>
-          </li> -->
         </ul>
     <h2 class="statistics_title">Advanced Statistics</h2>
     <p class="statistics_text">
@@ -228,7 +220,7 @@
   </footer>
 </div>
 <script src="js/main.js"></script>
-<script src="https://wzrd.in/standalone/copy-to-clipboard@latest" async></script>
+<script src="./node_modules/clipboard/dist/clipboard.min.js" async></script>
 <script>
 // 
     
